[package]
name = "startr"
version = "0.1.1"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
rayon = "1.5.1"
