[package]
name = "startr"
version = "0.1.2"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
rayon = "1.5.3"
